# src/gs-api/src/models/commande-client-dto.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 import { ClientDto } from './client-dto';
+import { LigneCommandeClientDto } from './ligne-commande-client-dto';
 export interface CommandeClientDto {
   id?: number;
   code?: string;
@@ -7,5 +8,6 @@ export interface CommandeClientDto {
   etatCommande?: 'EN_PREPARATION' | 'VALIDEE' | 'LIVREE';
   client?: ClientDto;
   idEntreprise?: number;
+  ligneCommandeClients?: Array<LigneCommandeClientDto>;
   commandeLivree?: boolean;
 }
