# src/gs-api/src/models/commande-fournisseur-dto.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 import { FournisseurDto } from './fournisseur-dto';
+import { LigneCommandeFournisseurDto } from './ligne-commande-fournisseur-dto';
 export interface CommandeFournisseurDto {
   id?: number;
   code?: string;
@@ -7,5 +8,6 @@ export interface CommandeFournisseurDto {
   etatCommande?: 'EN_PREPARATION' | 'VALIDEE' | 'LIVREE';
   fournisseur?: FournisseurDto;
   idEntreprise?: number;
+  ligneCommandeFournisseurs?: Array<LigneCommandeFournisseurDto>;
   commandeLivree?: boolean;
 }
